--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,10 @@
-
-
+<!DOCTYPE html>
+<head>
+  <title>Multistep Checkout Experience</title>
+</head>
+<body>
+  <div id='app'></div>
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src='./app.js'></script>
+</body>
