--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,2 +1,9 @@
-
-
+<!DOCTYPE html>
+<head>
+  <title>Connect Four</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id='app'></div>
+  <script src='./bundle.js'></script>
+</body>
